winHookDaemon - adaptation pour compilation GNU - TODO : serveur select

--- a/api/reparenting.api.core/.classpath
+++ b/api/reparenting.api.core/.classpath
@@ -9,6 +9,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/reparenting.api.launchprocess"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/reparenting.api.shared"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/J11"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/JUnixSocket"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JNAUnixSocket"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
