--- a/winHookDaemon2/Makefile
+++ b/winHookDaemon2/Makefile
@@ -1,7 +1,7 @@
 all :
 	gcc -c hookproc.c
 	gcc -shared -o HookProc.dll hookproc.o hookproc.def 
-	gcc hookserver.c -o hookserver.exe -std=gnu99
+	gcc hookserver.c -o hookserver.exe -std=gnu99 -lwsock32 -lpthreadGC2
 	
 # -Wl,--out-implib,libhookproc.a
 .PHONY: clean
