compilation 64 bits OK - TODO : validate win handle

--- a/winHookDaemon2/Makefile
+++ b/winHookDaemon2/Makefile
@@ -1,10 +1,9 @@
 all :
 	gcc -c hookproc.c
 	gcc -shared -o HookProc.dll hookproc.o hookproc.def 
-	gcc hookserver.c -o hookserver.exe -std=gnu99 -lwsock32 -lpthreadGC2
-	
-# -Wl,--out-implib,libhookproc.a
+	gcc hookserver.c -o hookserver.exe -std=gnu99 -lwsock32 -lpthread
+
 .PHONY: clean
 	
 clean:
-	rm *.o *.exe *.dll
+	del *.o *.exe *.dll
