--- a/winHookDaemon2/Makefile
+++ b/winHookDaemon2/Makefile
@@ -1,7 +1,7 @@
 all :
 	gcc -c hookproc.c
 	gcc -shared -o HookProc.dll hookproc.o hookproc.def 
-	gcc hookserver.c -o hookserver.exe -std=gnu99 -lwsock32 -lpthread
+	gcc hookserver.c -o hookserver.exe -std=gnu99 -lwsock32 -lpthread -static
 
 .PHONY: clean
 	
