--- a/api/core/pom.xml
+++ b/api/core/pom.xml
@@ -1,35 +1,140 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>core</artifactId>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <testSourceDirectory>test</testSourceDirectory>
-  </build>
-  <parent>
-  	<groupId>fr.labri.reparenting.api</groupId>
-  	<artifactId>api</artifactId>
-  	<version>1.0-SNAPSHOT</version>
-  </parent>
-  <dependencies>
-	<dependency>
-		<groupId>fr.labri.socket.unix</groupId>
-		<artifactId>JNAUnixSocket</artifactId>
-		<version>1.0</version>
-	</dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>core</artifactId>
+	<parent>
+		<groupId>fr.labri.reparenting.api</groupId>
+		<artifactId>api</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+
+	<properties>
+		<swt.version>4.2.1</swt.version>
+	</properties>
+
+	<dependencies>
 		<dependency>
-	<groupId>fr.labri</groupId>
-  <artifactId>J11</artifactId>
-  <version>1.0</version>
-  	</dependency>
-	<dependency>
-		<groupId>fr.labri.reparenting.api</groupId>
-		<artifactId>shared</artifactId>
-		<version>1.0-SNAPSHOT</version>
-	</dependency>
-	<dependency>
-		<groupId>fr.labri.reparenting.api</groupId>
-		<artifactId>launchprocess</artifactId>
-		<version>1.0-SNAPSHOT</version>
-	</dependency>
-  </dependencies>
+			<groupId>fr.labri.socket.unix</groupId>
+			<artifactId>JNAUnixSocket</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.labri</groupId>
+			<artifactId>J11</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.labri.reparenting.api</groupId>
+			<artifactId>shared</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.labri.reparenting.api</groupId>
+			<artifactId>launchprocess</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.swt</groupId>
+			<artifactId>${swt.artifactId}</artifactId>
+			<version>${swt.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+
+
+	</dependencies>
+
+
+
+
+	<!-- The profiles are used to select correct swt artifact at compile -->
+	<!-- (and development) time. We will have all of them at the runtime. -->
+	<!-- That's the goal of this project ;-) You can manually force -->
+	<!-- different profile by maven's command line argument -P -->
+	<profiles>
+		<profile>
+			<id>linux32</id>
+			<activation>
+				<os>
+					<family>linux</family>
+					<arch>i386</arch>
+				</os>
+			</activation>
+			<properties>
+				<swt.artifactId>org.eclipse.swt.gtk.linux.x86</swt.artifactId>
+			</properties>
+		</profile>
+		<profile>
+			<id>linux64</id>
+			<activation>
+				<os>
+					<family>linux</family>
+					<arch>amd64</arch>
+				</os>
+			</activation>
+			<properties>
+				<swt.artifactId>org.eclipse.swt.gtk.linux.x86_64</swt.artifactId>
+			</properties>
+		</profile>
+		<profile>
+			<id>macosx32</id>
+			<activation>
+				<os>
+					<family>macosx</family>
+					<arch>i386</arch>
+				</os>
+			</activation>
+			<properties>
+				<swt.artifactId>org.eclipse.swt.cocoa.macosx</swt.artifactId>
+			</properties>
+		</profile>
+		<profile>
+			<id>macosx64</id>
+			<activation>
+				<os>
+					<family>macosx</family>
+					<arch>x86_64</arch>
+				</os>
+			</activation>
+			<properties>
+				<swt.artifactId>org.eclipse.swt.cocoa.macosx.x86_64</swt.artifactId>
+			</properties>
+		</profile>
+		<profile>
+			<id>win32</id>
+			<activation>
+				<os>
+					<family>windows</family>
+					<arch>x86</arch>
+				</os>
+			</activation>
+			<properties>
+				<swt.artifactId>org.eclipse.swt.win32.win32.x86</swt.artifactId>
+			</properties>
+		</profile>
+		<profile>
+			<id>win64</id>
+			<activation>
+				<os>
+					<family>windows</family>
+					<arch>amd64</arch>
+				</os>
+			</activation>
+			<properties>
+				<swt.artifactId>org.eclipse.swt.win32.win32.x86_64</swt.artifactId>
+			</properties>
+		</profile>
+	</profiles>
+
+	<repositories>
+		<!-- There's no official public maven eclipse repository yet. But a lot -->
+		<!-- of people miss it. Jan-Hendrik Peters has created swt-release-fetcher -->
+		<!-- (https://github.com/hennr/swt-release-fetcher) and republish the swt -->
+		<!-- jars as maven repo on google code. -->
+		<repository>
+			<id>swt-repo-by-hennr</id>
+			<url>http://swt-repo.googlecode.com/svn/repo/</url>
+		</repository>
+	</repositories>
+
 </project>
