--- a/plugin/core/pom.xml
+++ b/plugin/core/pom.xml
@@ -1,13 +1,40 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>core</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-  </build>
   <parent>
-  	<groupId>fr.labri.reparenting</groupId>
+  	<groupId>fr.labri.reparenting.plugin</groupId>
   	<artifactId>plugin</artifactId>
   	<version>1.0-SNAPSHOT</version>
   </parent>
+  
+  <properties>
+    <tycho-version>0.16.0</tycho-version>
+  </properties>
+
+  <repositories>
+   <repository>
+     <id>juno</id>
+     <layout>p2</layout>
+     <url>http://download.eclipse.org/releases/juno</url>
+   </repository>
+  </repositories>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-maven-plugin</artifactId>
+        <version>${tycho-version}</version>
+        <extensions>true</extensions>
+      </plugin>
+    </plugins>
+  </build>
+  
+  <dependencies>
+  	<dependency>
+  		<groupId>fr.labri.reparenting.api</groupId>
+  		<artifactId>core</artifactId>
+  		<version>1.0-SNAPSHOT</version>
+  	</dependency>
+  </dependencies>
 </project>
