fixed plugin.core pom.xml

--- a/plugin/core/build.properties
+++ b/plugin/core/build.properties
@@ -1,19 +1,7 @@
-source.. = src/
-output.. = bin/
+source.. = src/main/java/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               contexts.xml,\
-               lib/,\
-               lib/J11.jar,\
-               lib/reparenting.api.core.jar,\
-               lib/reparenting.api.shared.jar,\
-               lib/reparenting.api.launchprocess.jar
+               contexts.xml
 jre.compilation.profile = JavaSE-1.7
-jars.extra.classpath = lib/J11.jar,\
-                       lib/jna.jar,\
-                       lib/platform.jar,\
-                       lib/reparenting.api.core.jar,\
-                       lib/reparenting.api.shared.jar,\
-                       lib/reparenting.api.launchprocess.jar
