--- a/api/core/pom.xml
+++ b/api/core/pom.xml
@@ -2,6 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>core</artifactId>
+	<packaging>bundle</packaging>
 	<parent>
 		<groupId>fr.labri.reparenting.api</groupId>
 		<artifactId>api</artifactId>
@@ -39,13 +40,30 @@
 			<version>${swt.version}</version>
 			<scope>provided</scope>
 		</dependency>
-
-
-
 	</dependencies>
 
-
-
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<configuration>
+					<instructions>
+						<Export-Package>fr.labri.reparenting.api.core.*,
+						fr.labri.reparenting.api.shared, com.sun.jna.platform.*, fr.labri.*, com.*, gnu.*</Export-Package>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 	<!-- The profiles are used to select correct swt artifact at compile -->
 	<!-- (and development) time. We will have all of them at the runtime. -->
